styles.css
:root
{
    --dark: #461220;
    --light: #E3D3E4;
    
    --primary: #81A684; 
    --secondary: #8C2F39;
    --tertiary: #C8D6AF;
}
h1
{
    color:var(--light);
    text-align: center;
    margin-block-end: 0;
    padding: 1rem;
    background-color: var(--dark);
}
body
{
    background-color:var(--light);
    font-family: 'Quicksand', sans-serif;
}
/* nav styles start */
nav li
{
   list-style-type: none; 
   display: inline;
   padding: 2rem;
   font-size: 1.1rem;
}
nav li a
{
    color: var(--dark);
    text-decoration: none;
    padding: 0.5rem;
    border-radius:10%;
}
nav li a.current
{
    background-color: var(--dark);
    color: var(--light);
   
}
nav li a:hover
{
    color:var(--secondary);
    background-color: var(--tertiary);
}
nav
{
     background-color: var(--secondary);
     padding: 0.2rem;
     position:sticky;
     text-align: center;
     margin-block-start: 0;
     border: 0.5rem double var(--dark);
}
/* nav styles end */
/* layout a styles start */
/*
.layouta
{
    margin: 1rem;
    display: flex;
    justify-content: space-evenly;
    column-gap: 25rem;
    flex-wrap: wrap;
}
.layouta section
{

}
.layouta .colors
{
    display: flex;
}
/*  */

div#a 
{
    background-color: var(--dark);
}
div#b
{
    background-color: var(--primary);
}
div#c 
{
    background-color: var(--secondary);
}
div#d
{
    background-color: var(--tertiary);
}
.layoutb
    {
        display: flex;
        flex-direction: column;
        align-items: center;
        min-inline-size: 25vw;
        margin: auto;
        margin-top: 2rem;
        row-gap: 1rem;
    }
@media screen and (max-width:35rem)
{
    nav li 
    {
        display: block;
        margin-inline-end:2.5rem;
        padding:0.5rem;
    }
    .layoutb section 
    {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .layoutb .colors
    {
        display: flex;
        flex-direction: column;
        margin: auto;
    }

    .layoutb .colors div 
    {
        min-inline-size: 10rem;
        min-block-size: 2rem;
    }
    .layouta .colors
    {
        max-inline-size: 10rem;
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: 8rem;
        margin: auto;
        column-gap: 0;
    }
    .layouta
    {
        display: grid;
        max-inline-size: 30rem;
        margin: auto;
        margin-top: 2rem;
    }

    .layouta div 
    {
        text-align: center;
    }
}
@media screen and (min-width:35rem)
{
   .layoutb section 
    {
        display: flex;
        column-gap: 2rem;
    }
    .layoutb .colors 
    {
        display: flex;
        flex-wrap: wrap;
        max-inline-size: 16rem;
    }
   .colors div 
    {
        min-inline-size: 8rem;
        min-block-size: 8rem;
    }
}
@media screen and (min-width:60rem)
{
    .layoutb
    {
        display:flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        column-gap: 3rem;
        max-inline-size: 60rem;
        margin: auto;
        margin-block-start: 2rem;
    }
}

